--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
         go-version: '1.21.x'
         cache-dependency-path: subdir/go.sum
     - name: Install dependencies
-      run: go get .
+      run: go mod download
     - name: Build
       run: go build -v ./...
     - name: Test with the Go CLI
