--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build
       run: go build -v ./...
     - name: Test with the Go CLI
-      run: go test -json > TestResults.json
+      run: go test ./... -json > TestResults.json
     - name: Upload Go test results
       uses: actions/upload-artifact@v4
       with:
