--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,13 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-d", "db_prod" ]
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s
+
 
   migrations: # подготовка БД для сервиса
     container_name: migrator
@@ -19,7 +26,9 @@ services:
     volumes:
       - ./migrations:/migrations
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+        restart: true 
 
 
 #  zookeeper:
